writ-compiler/tests/snapshots/lowering_tests__lower_shift_operators.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "f",
                name_span: 3..4,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "x",
                        name_span: 13..14,
                        ty: None,
                        value: Binary {
                            left: Ident {
                                name: "a",
                                span: 17..18,
                            },
                            op: Shl,
                            right: Ident {
                                name: "b",
                                span: 22..23,
                            },
                            span: 17..23,
                        },
                        span: 9..24,
                    },
                    Let {
                        mutable: false,
                        name: "y",
                        name_span: 29..30,
                        ty: None,
                        value: Binary {
                            left: Ident {
                                name: "c",
                                span: 33..34,
                            },
                            op: Shr,
                            right: Ident {
                                name: "d",
                                span: 38..39,
                            },
                            span: 33..39,
                        },
                        span: 25..40,
                    },
                ],
                span: 0..42,
            },
        ),
    ],
}
