writ-compiler/tests/snapshots/lowering_tests__lower_struct_lifecycle_hook.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Class(
            AstClassDecl {
                attrs: [],
                vis: None,
                name: "Foo",
                name_span: 6..9,
                generics: [],
                members: [
                    Field(
                        AstStructField {
                            vis: None,
                            is_mutable: false,
                            name: "x",
                            name_span: 12..13,
                            ty: Named {
                                name: "int",
                                span: 15..18,
                            },
                            default: None,
                            span: 12..18,
                        },
                    ),
                    OnHook {
                        event: "create",
                        event_span: 23..29,
                        body: [
                            Let {
                                mutable: false,
                                name: "y",
                                name_span: 36..37,
                                ty: None,
                                value: IntLit {
                                    value: 1,
                                    span: 40..41,
                                },
                                span: 32..42,
                            },
                        ],
                        span: 20..44,
                    },
                ],
                span: 0..46,
            },
        ),
    ],
}
