writ-compiler/tests/snapshots/lowering_tests__lower_struct_multiple_hooks.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Class(
            AstClassDecl {
                attrs: [],
                vis: None,
                name: "Bar",
                name_span: 6..9,
                generics: [],
                members: [
                    OnHook {
                        event: "create",
                        event_span: 15..21,
                        body: [],
                        span: 12..25,
                    },
                    OnHook {
                        event: "finalize",
                        event_span: 30..38,
                        body: [],
                        span: 27..42,
                    },
                ],
                span: 0..44,
            },
        ),
    ],
}
