writ-compiler/tests/snapshots/lowering_tests__nested_optional_type.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "f",
                name_span: 3..4,
                generics: [],
                params: [
                    Regular(
                        AstParam {
                            name: "x",
                            name_span: 5..6,
                            ty: Generic {
                                name: "Option",
                                args: [
                                    Generic {
                                        name: "List",
                                        args: [
                                            Generic {
                                                name: "Option",
                                                args: [
                                                    Named {
                                                        name: "string",
                                                        span: 13..19,
                                                    },
                                                ],
                                                span: 13..20,
                                            },
                                        ],
                                        span: 8..21,
                                    },
                                ],
                                span: 8..22,
                            },
                            span: 5..22,
                        },
                    ),
                ],
                return_type: None,
                body: [],
                span: 0..26,
            },
        ),
    ],
}
