writ-compiler/tests/snapshots/lowering_tests__operator_binary_sub_desugars_to_sub_contract.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Impl(
            AstImplDecl {
                generics: [],
                contract: Some(
                    Generic {
                        name: "Sub",
                        args: [
                            Named {
                                name: "vec2",
                                span: 30..34,
                            },
                            Named {
                                name: "vec2",
                                span: 39..43,
                            },
                        ],
                        span: 12..58,
                    },
                ),
                target: Named {
                    name: "vec2",
                    span: 5..9,
                },
                members: [
                    Fn(
                        AstFnDecl {
                            attrs: [],
                            vis: None,
                            name: "sub",
                            name_span: 21..22,
                            generics: [],
                            params: [
                                SelfParam {
                                    mutable: false,
                                    span: 12..58,
                                },
                                Regular(
                                    AstParam {
                                        name: "other",
                                        name_span: 23..28,
                                        ty: Named {
                                            name: "vec2",
                                            span: 30..34,
                                        },
                                        span: 23..34,
                                    },
                                ),
                            ],
                            return_type: Some(
                                Named {
                                    name: "vec2",
                                    span: 39..43,
                                },
                            ),
                            body: [
                                Expr {
                                    expr: Call {
                                        callee: Ident {
                                            name: "vec2",
                                            span: 46..50,
                                        },
                                        args: [
                                            AstArg {
                                                name: None,
                                                value: IntLit {
                                                    value: 0,
                                                    span: 51..52,
                                                },
                                                span: 51..52,
                                            },
                                            AstArg {
                                                name: None,
                                                value: IntLit {
                                                    value: 0,
                                                    span: 54..55,
                                                },
                                                span: 54..55,
                                            },
                                        ],
                                        span: 46..56,
                                    },
                                    span: 46..56,
                                },
                            ],
                            span: 12..58,
                        },
                    ),
                ],
                span: 12..58,
            },
        ),
    ],
}
